--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,220 +1,218 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'IBM Plex Mono', monospace;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "IBM Plex Mono", monospace;
 }
 
 :root {
-    font-size: 10px;
-    max-width: 100%;
+  font-size: 10px;
+  max-width: 100%;
 }
 
-.fontF-title{
-    font-family: 'IBM Plex Sans', sans-serif;
+.fontF-title {
+  font-family: "IBM Plex Sans", sans-serif;
 }
 
 .btn {
-    background-color: #00F3BB;
-    border: none;
-    height: 56px;
-    font-size: 1.8rem;
-    text-transform: uppercase;
-    color: #060A24;
+  background-color: #00f3bb;
+  border: none;
+  height: 56px;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  color: #060a24;
 }
 
 /* Menu Desktop*/
 .navbar {
-    height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo-container {
-    width: 12%;
-    display: flex;
-    justify-content: center;
+  width: 12%;
+  display: flex;
+  justify-content: center;
 }
 
 .logo-container .logo {
-    width: 36px;
-    height: 36px;
+  width: 36px;
+  height: 36px;
 }
 
 .menu-container {
-    width: 50%;
-    position: absolute;
-    right: 10px;
+  width: 50%;
+  position: absolute;
+  right: 10px;
 }
 
 .menu {
-    width: 100%;
-    font-size: 1.6rem;
-    list-style-type: none;
-    display: flex;
-    justify-content: space-evenly;
+  width: 100%;
+  font-size: 1.6rem;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .menu a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 /* End Menu Desktop*/
 
 /* Menu Mobile*/
 
-.burger{
-    margin-right: 20px;
-    display: none;
+.burger {
+  margin-right: 20px;
+  display: none;
 }
 
-.linea{
-    width: 20px;
-    height: 2px;
-    background-color: black;
-    margin: 5px;
-    transition: all 0.2s ease;
+.linea {
+  width: 20px;
+  height: 2px;
+  background-color: black;
+  margin: 5px;
+  transition: all 0.2s ease;
 }
 
 .menu-mobile {
-    background: rgb(0, 0, 236);
-    font-size: 1.6rem;
-    transition: all 1s ease;
-    position: absolute;
-    top: 80px;
-    width: 100%;
-    display: none;
+  background: rgb(0, 0, 236);
+  font-size: 1.6rem;
+  transition: all 1s ease;
+  position: absolute;
+  top: 80px;
+  width: 100%;
+  display: none;
 }
 
 .menu-mobile-item {
-    height: 50px;
-    display: flex;
-    align-items: center;
-    padding-left: 20px;
-    transition: all 0.5s ease;
-    list-style-type: none;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+  transition: all 0.5s ease;
+  list-style-type: none;
 }
 
 .menu-mobile-item a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 .check-menu {
-    display: none;
+  display: none;
 }
 
 .check-menu:checked ~ .menu-mobile {
-    display: block;
+  display: block;
 }
 
-.check-menu:checked + .container-burger .burger .linea-top{
-    transform: translate(0%, 330%) rotate(45deg);
+.check-menu:checked + .container-burger .burger .linea-top {
+  transform: translate(0%, 330%) rotate(45deg);
 }
 
-.check-menu:checked + .container-burger .burger .linea-med{
-    opacity: 0;
+.check-menu:checked + .container-burger .burger .linea-med {
+  opacity: 0;
 }
 
-.check-menu:checked + .container-burger .burger .linea-low{
-    transform: translate(0%, -363%) rotate(-45deg);
+.check-menu:checked + .container-burger .burger .linea-low {
+  transform: translate(0%, -363%) rotate(-45deg);
 }
 
 /* End Menu Mobile*/
 
 /* Section hello world */
 
-.hello-world{
-    padding: 115px 0 0 145px;
-    height: 369px;
+.hello-world {
+  padding: 115px 0 0 145px;
+  height: 369px;
 }
 
-.title{
-    font-size: 5.9rem;
+.title {
+  font-size: 5.9rem;
 }
 
 .dot {
-    color: #0000EC;
+  color: #0000ec;
 }
 
 .description {
-    width: 590px;
-    font-size: 1.5rem;
-    margin-top: 10px;
+  width: 590px;
+  font-size: 1.5rem;
+  margin-top: 10px;
 }
 
-.btn-conoce-mas{
-    width: 226px;
-    margin-top: 60px;
+.btn-conoce-mas {
+  width: 226px;
+  margin-top: 60px;
 }
 
 .world {
-    text-decoration: line-through;
+  text-decoration: line-through;
 }
 /* End Section hello world */
 
 /* Media Queries mobile*/
 
-@media screen and (max-width: 320px){
+@media screen and (max-width: 320px) {
+  .btn {
+    height: 48px;
+    font-size: 1.6rem;
+  }
 
-    .btn {
-        height: 48px;
-        font-size: 1.6rem;
-    }
+  .navbar {
+    height: 44px;
+  }
 
-    .navbar {
-        height: 44px;
-    }
+  .logo-container {
+    margin-left: 8px;
+  }
 
-    .logo-container {
-        margin-left: 8px;
-    }
+  .logo-container .logo {
+    width: 24px;
+    height: 24px;
+  }
 
-    .logo-container .logo {
-        width: 24px;
-        height: 24px;
-    }
+  /* menu hamburger */
 
-    /* menu hamburger */
+  .menu-container {
+    display: none;
+  }
 
-    .menu-container{
-        display: none;
-    }
+  .burger {
+    display: block;
+  }
 
-    .burger{
-        display: block;
-    }
+  .menu-mobile {
+    top: 44px;
+    display: none;
+  }
 
-    .menu-mobile {
-        top: 44px;
-    }
+  /* end menu hamburger */
 
-    /* end menu hamburger */
+  .hello-world {
+    padding: 29px 0 0 15px;
+    height: 369px;
+  }
 
-    .hello-world{
-        padding: 29px 0 0 15px;
-        height: 369px;
-    }
+  .title {
+    font-size: 3rem;
+    width: 215px;
+  }
 
-    .title{
-        font-size: 3rem;
-        width: 215px;
-    }
+  .description {
+    width: 288px;
+    font-size: 1.1rem;
+    margin-top: 10px;
+  }
 
-    .description {
-        width: 288px;
-        font-size: 1.1rem;
-        margin-top: 10px;
-    }
-
-    .btn-conoce-mas{
-        width: 288px;
-        margin-top: 35px;
-    }
-
+  .btn-conoce-mas {
+    width: 288px;
+    margin-top: 35px;
+  }
 }
 
 /* End Media Queries mobile*/
-
