--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,20 +8,55 @@
 :root {
   font-size: 10px;
   max-width: 100%;
+  scroll-behavior: smooth;
 }
-
+/* Reutilizables */
 .fontF-title {
   font-family: "IBM Plex Sans", sans-serif;
 }
 
 .btn {
-  background-color: #00f3bb;
+  background: #00f3bb;
   border: none;
   height: 56px;
   font-size: 1.8rem;
   text-transform: uppercase;
   color: #060a24;
+  cursor: pointer;
+  transition: all 0.5s ease;
 }
+
+.btn:hover {
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(0, 240, 184, 1) 0%,
+    rgba(0, 0, 254, 1) 100%
+  );
+  color: white;
+}
+
+.tamaño_titulo {
+  font-size: 4.6rem;
+  font-weight: lighter;
+}
+
+.ttl_blanco {
+  color: white;
+}
+/* fin reutilizables */
+
+/* scroll personalizado */
+.contenedor-global::-webkit-scrollbar {
+  width: 8px;
+  background: rgb(200, 190, 180);
+}
+
+.contenedor-global::-webkit-scrollbar-thumb {
+  background: linear-gradient(225deg, #0000ff 0%, #0000a3 100%);
+  border-radius: 10px;
+}
+/* Fin scroll personalizado */
 
 /* Menu Desktop*/
 .navbar {
@@ -40,6 +75,7 @@
 .logo-container .logo {
   width: 36px;
   height: 36px;
+  user-select: none;
 }
 
 .menu-container {
@@ -56,18 +92,25 @@
   justify-content: space-evenly;
 }
 
-.menu a {
+.menu .nav {
   text-decoration: none;
   color: black;
+  cursor: pointer;
+  transition: all 0.5s ease;
 }
 
-/* End Menu Desktop*/
+.menu .nav:hover {
+  color: #00f3bb;
+  text-decoration: line-through;
+}
+
+/* fin Menu Desktop*/
 
 /* Menu Mobile*/
-
 .burger {
   margin-right: 20px;
   display: none;
+  user-select: none;
 }
 
 .linea {
@@ -121,18 +164,17 @@
 .check-menu:checked + .container-burger .burger .linea-low {
   transform: translate(0%, -363%) rotate(-45deg);
 }
+/* fin Menu Mobile*/
 
-/* End Menu Mobile*/
-
-/* Section hello world */
-
+/* Sección hello world */
 .hello-world {
   padding: 115px 0 0 145px;
   height: 369px;
 }
 
-.title {
+.titleH {
   font-size: 5.9rem;
+  font-weight: lighter;
 }
 
 .dot {
@@ -153,16 +195,188 @@
 .world {
   text-decoration: line-through;
 }
-/* End Section hello world */
+/* fin Sección hello world */
+
+/* Sección Episodios */
+.episodios {
+  background: linear-gradient(225deg, #0000ff 0%, #0000a3 100%);
+  height: 1042px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
+  position: relative;
+}
+
+.tituloE {
+  position: absolute;
+  left: 150px;
+  top: 174px;
+}
+
+.podcast_container {
+  display: grid;
+  grid-template-columns: 584px 584px;
+  grid-template-rows: 232px 232px;
+  row-gap: 72px;
+  column-gap: 72px;
+}
+/* fin Sección Episodios */
+
+/* Sección de donde venimos */
+.de-donde-venimos {
+  position: relative;
+  height: 520px;
+}
+
+.phone {
+  width: 387px;
+  height: 610px;
+  position: absolute;
+  top: -175px;
+  left: 175px;
+}
+
+.informacion {
+  width: 464px;
+  position: absolute;
+  right: 210px;
+  top: 0px;
+}
+
+.d_donde_v {
+  font-size: 1.6rem;
+}
+
+.tituloDDV {
+  margin-bottom: 24px;
+}
+
+.p2 {
+  margin-top: 15px;
+}
+/* Fin sección de donde venimos */
+
+/* sección invitadas/os estelares */
+.tituloIE {
+  margin: 0px 0 36px 150px;
+}
+
+.container-grid {
+  display: grid;
+  grid-template-columns: 33.33% 33.33% 33.33%;
+  grid-template-rows: 364px 364px;
+}
+
+.container-img {
+  background-color: grey;
+}
+
+.img {
+  width: 100%;
+  height: 100%;
+}
+/* Fin sección invitadas/os estelares */
+
+/* sección algunos de nuestros temas */
+.nuestros-temas {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 64px 0 30px 0;
+}
+
+.tituloANT {
+  width: 80%;
+  margin-bottom: 56px;
+}
+
+.imagenes {
+  height: 198px;
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.contenedor-temas {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.imagenes .contenedor-temas .tema {
+  margin-top: 20px;
+  font-size: 2.4rem;
+  width: 220px;
+  font-weight: bold;
+  text-align: center;
+}
+/* fin sección algunos de nuestros temas */
+
+/* sección ultimas novedades */
+.ultimas-novedades {
+  height: 518px;
+  background: linear-gradient(225deg, #0000ff 0%, #0000a3 100%);
+  clip-path: polygon(0 25%, 100% 0%, 100% 100%, 0% 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.tituloQUN {
+  margin: 36px 0;
+}
+
+.btn-escucha-episodios {
+  width: 345px;
+}
+/* fin sección ultimas novedades */
+
+/* Footer*/
+.footer {
+  height: 95px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.cpr {
+  font-size: 1.6rem;
+  margin-left: 100px;
+}
+
+.redes-sociales {
+  display: flex;
+  width: 260px;
+  justify-content: space-evenly;
+  margin-right: 100px;
+  font-size: 1.8rem;
+}
+
+.redes-sociales .iconos {
+  text-decoration: none;
+  cursor: pointer;
+  color: #060a24;
+}
+/* fin Footer*/
 
 /* Media Queries mobile*/
-
 @media screen and (max-width: 320px) {
+  /* Reutilizables */
   .btn {
     height: 48px;
     font-size: 1.6rem;
   }
 
+  .tamaño_titulo {
+    font-size: 3.6rem;
+  }
+  /* fin Reutilizables */
+
+  /* header logo */
   .navbar {
     height: 44px;
   }
@@ -175,9 +389,9 @@
     width: 24px;
     height: 24px;
   }
+  /* fin header logo */
 
   /* menu hamburger */
-
   .menu-container {
     display: none;
   }
@@ -190,17 +404,17 @@
     top: 44px;
     display: none;
   }
+  /* fin menu hamburger */
 
-  /* end menu hamburger */
-
+  /* sección hello world */
   .hello-world {
     padding: 29px 0 0 15px;
-    height: 369px;
+    height: 285px;
   }
 
-  .title {
-    font-size: 3rem;
-    width: 215px;
+  .titleH {
+    font-size: 3.6rem;
+    width: 221px;
   }
 
   .description {
@@ -213,6 +427,160 @@
     width: 288px;
     margin-top: 35px;
   }
-}
+  /* fin sección hello world */
 
+  /* Sección Episodios */
+  .episodios {
+    height: 1215px;
+    clip-path: polygon(0 3%, 100% 0%, 100% 97%, 0% 100%);
+  }
+
+  .tituloE {
+    left: 10px;
+    top: 60px;
+  }
+
+  .podcast_container {
+    grid-template-columns: 305px;
+    row-gap: 11px;
+  }
+  /* fin sección Episodios */
+
+  /* Sección de donde venimos */
+  .de-donde-venimos {
+    height: 760px;
+  }
+  .phone {
+    width: 320px;
+    height: 479px;
+    position: absolute;
+    top: -90px;
+    left: 0;
+  }
+
+  .informacion {
+    width: 288px;
+    position: absolute;
+    left: 16px;
+    top: 420px;
+  }
+
+  .d_donde_v {
+    font-size: 1.4rem;
+  }
+
+  .tituloDDV {
+    margin-bottom: 10px;
+  }
+  /* Fin sección de donde venimos */
+
+  /* sección invitadas/os estelares */
+  .tituloIE {
+    margin: 40px 0 14px 15px;
+  }
+
+  .container-grid {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(6, 243px);
+  }
+
+  .container-img {
+    background-color: grey;
+  }
+
+  .img {
+    width: 100%;
+    height: 100%;
+  }
+  /* Fin sección invitadas/os estelares */
+
+  /* sección algunos de nuestros temas */
+  .nuestros-temas {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 48px 0 30px 0;
+  }
+
+  .tituloANT {
+    width: 90%;
+    margin-bottom: 5px;
+  }
+
+  .imagenes {
+    height: 860px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .contenedor-temas {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .imagenes .contenedor-temas .tema {
+    margin-top: 10px;
+    font-size: 2.4rem;
+    width: 220px;
+    font-weight: bold;
+    text-align: center;
+  }
+  /* fin sección algunos de nuestros temas */
+
+  /* sección ultimas novedades */
+  .ultimas-novedades {
+    height: 341px;
+    background: linear-gradient(225deg, #0000ff 0%, #0000a3 100%);
+    clip-path: polygon(0 8%, 100% 0%, 100% 100%, 0% 100%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .tituloQUN {
+    margin: 36px 0;
+    width: 190px;
+  }
+
+  .btn-escucha-episodios {
+    width: 288px;
+  }
+  /* fin sección ultimas novedades */
+
+  /* Footer*/
+  .footer {
+    height: 121px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 20px 0;
+  }
+
+  .cpr {
+    font-size: 1.6rem;
+    margin-left: 0px;
+  }
+
+  .redes-sociales {
+    display: flex;
+    width: 260px;
+    justify-content: space-between;
+    margin-right: 0px;
+    font-size: 1.8rem;
+  }
+
+  .redes-sociales .iconos {
+    text-decoration: none;
+    cursor: pointer;
+    color: #060a24;
+  }
+  /* fin Footer*/
+}
 /* End Media Queries mobile*/
