--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,6 +9,7 @@
   font-size: 10px;
   max-width: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 /* Reutilizables */
 .fontF-title {
@@ -216,11 +217,11 @@
 }
 
 .podcast_container {
+  width: 93.3%;
   display: grid;
-  grid-template-columns: 584px 584px;
-  grid-template-rows: 232px 232px;
-  row-gap: 72px;
-  column-gap: 72px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 232px);
+  grid-gap: 72px;
 }
 /* fin Sección Episodios */
 
@@ -441,8 +442,9 @@
   }
 
   .podcast_container {
-    grid-template-columns: 305px;
-    row-gap: 11px;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 225px);
+    grid-gap: 18px;
   }
   /* fin sección Episodios */
 
